2003-01-05  Roland Mas  <99.roland.mas@aist.enst.fr>

	* Removed uuencoded image files.  They are not needed anymore
	after a new upstream release.

2003-01-04  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/pm/calendar.php: show tasks in calendar.

	* www/pm/{add_task,mod_task}.php: update link to View Calendar.

	* www/include/languages/{Base,Spanish}.tab: new entries for
	calendar tasks.

	* www/include/languages/Base.tab: Bug 123: tabify "conf" entries.

	* www/my/index.php: Bug 120: fix link to unmonitor file

	* www/pm/task.php www/forum/save.php www/forum/new.php
	www/forum/monitor.php www/project/filemodule_monitor.php
	docs/xdocs/xdocs/contributions/templating.xml: fix typo:
	exit_missing_params --> exit_missing_param

2003-01-02  Tim Perdue <tim@gforge.org>

	* Added interface to tracker so you can build relationships w/Task
	manager.

2003-01-02  Tim Perdue <tim@gforge.org>

	* Complete rewrite of doc mgr in GForge coding guidelines.

2003-01-02  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/survey/adminedit_survey.php: sanity checks when posting
	changes.
	* www/themes/savannah/SavannahTheme.class: missing close quotes.

2003-01-01  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/themes/savannah/menu.php: new file.
	* www/themes/savannah/SavannahTheme.class: new file.
	* www/themes/savannah_*/Theme.class: make these derived classes of
	SavannahTheme.

2002-12-31  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/Layout.class: optionally add "Show Source" link to
	bottom of each page.
	* www/source.php: new file.
	* etc/local.inc: add $sys_show_source option.
	* db/20021223.sql: Patch 97: drop project_task_vw before create.
	* www/pm/calendar.php: change output to valid XHTML 1.0 with HTML
	4.0 compatability.

2002-12-30  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/pm/index.php, www/pm/admin/index.php: Bug 96: fix spuriours
	errors when no subprojects are defined.
	* common/include/User.class: Fix pg_atoi problem.
