@@ -1,3 +1,7 @@
+2003-01-06 Tom Copeland <tom@infoether.com>
+
+	* Modifier tracker monitor buttons so they show current monitoring status.
+
 2003-01-05  Roland Mas  <99.roland.mas@aist.enst.fr>
 
 	* Removed uuencoded image files.  They are not needed anymore
